# stacksy

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CodeIterator.py  Makefile  Parser.py  README.md  StacksyFunction.py  a.out  cmake_install.cmake  debugger  debugger – Kopi.cpp  debugger.cpp  factorial.stacksy  gameoflife.stacksy  main.py  stabs.py  std.stacksy  test.c  test.s  test.stacksy
debugger/: CMakeCache.txt  CMakeLists.txt  Makefile  README.me  breakpoint.hpp  cmake_install.cmake  debugeepipe.hpp  debugger  debugger.cpp  debugger.hpp  debuggerview.cpp  debuggerview.hpp  debuginfo.cpp  debuginfo.hpp  ncursesHelpers.cpp  ncursesHelpers.hpp
debugger/linenoise/: Makefile
debugger/ncurses/: Makefile  config.status  edit_man.sh  man_alias.sed
debugger/ncurses/c++/: Makefile  demo
debugger/ncurses/form/: Makefile
debugger/ncurses/include/: MKterm.h.awk  Makefile  curses.h  curses.head  ncurses_cfg.h  term.h
debugger/ncurses/man/: Makefile  ncurses6-config.1
debugger/ncurses/menu/: Makefile
debugger/ncurses/misc/: Makefile  ncurses-config
debugger/ncurses/ncurses/: Makefile  make_hash  make_keys  report_offsets
debugger/ncurses/package/: mingw-ncurses.nsi
debugger/ncurses/panel/: Makefile
debugger/ncurses/progs/: Makefile  clear  infocmp  tabs  tic  toe  tput  tset
debugger/ncurses/test/: Makefile  back_ground  background  blue  bs  cardfile  chgat  clip_printw  color_content  color_set  demo_altkeys  demo_defkey  demo_forms  demo_keyok  demo_menus  demo_new_pair  demo_panels  demo_tabs  demo_termcap  demo_terminfo  ditto  dots  dots_curses  gdc  (+58 more)
(+19 files in other folders)
